--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <title>Mapa de Mar del Plata</title>
+    <style>
+        #mapa {
+            width: 50rem;
+            height: 50rem;
+        }
+    </style>
+</head>
+<body>
+    <div id="mapa"></div>
 
+    <script>
+        let mapOptions = {
+            center: [-37.997731, -57.548408],
+            zoom: 13
+        };
+        let map = L.map('mapa', mapOptions);
+        let layer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '© OpenStreetMap contributors'
+        });
+        map.addLayer(layer);
+    </script>
+</body>
+</html>
