--- a/index.html
+++ b/index.html
@@ -3,29 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <title>Mapa de Mar del Plata</title>
-    <style>
-        #mapa {
-            width: 50rem;
-            height: 50rem;
-        }
-    </style>
+    <title>Lugares Accesibles - IncluMar</title>
+    <link rel="stylesheet" href="PagPrincipal.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 </head>
 <body>
-    <div id="mapa"></div>
 
-    <script>
-        let mapOptions = {
-            center: [-37.997731, -57.548408],
-            zoom: 13
-        };
-        let map = L.map('mapa', mapOptions);
-        let layer = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '© OpenStreetMap contributors'
-        });
-        map.addLayer(layer);
-    </script>
+    <header>
+        <div>
+        <h1>IncluMar</h1>
+        <input type="text" id="search-input" placeholder="Buscar lugares...">
+        </div>
+        <img src="./Imagenes/usuario.png" alt="" class="usuario">
+    </header>
+    <main>
+        <section class="places-list">
+            <h2>Lugares accesibles</h2>
+
+            <template id="place-template">
+            <div class="place-card">
+                <div class="place-flex">
+                    <div class="place-info">
+                        <h3></h3>
+                        <p class="category"></p>
+                        <p class="address"></p>
+                    </div>
+                    <div class="btn-container"><button>Ver en el mapa</button></div>
+                </div>
+                <div class="tags-container">
+                </div>
+            </div>
+            </template>
+
+        </section>
+    </main>
+    <script src="./app.js"></script>
 </body>
 </html>
