--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lugares Accesibles - IncluMar</title>
-    <link rel="stylesheet" href="PagPrincipal.css">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="stylesheet" href="PagPrincipal.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 </head>
 <body>
-
     <header>
         <div>
         <h1>IncluMar</h1>
@@ -19,8 +20,11 @@
         <img src="./Imagenes/usuario.png" alt="" class="usuario">
     </header>
     <main>
+        <section id="mapa">
+        </section>
         <section class="places-list">
-            <h2>Lugares accesibles</h2>
+            <h2>Lugares Accesibles</h2>
+            <button id="Filtros">Filtros</button>
 
             <template id="place-template">
             <div class="place-card">
@@ -36,9 +40,10 @@
                 </div>
             </div>
             </template>
-
         </section>
     </main>
-    <script src="./front.js"></script>
+    <footer></footer>
+    <script src="./app.js"></script>
+    <script src="./mapa.js"></script>
 </body>
 </html>
