--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lugares Accesibles - IncluMar</title>
+    <title>Lugares Accesibles - IncluMDP</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="./css/PagPrincipal.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div>
-        <a href="./index.html"><h1>IncluMar</h1></a>
+        <a href="./index.html"><h1>IncluMDP</h1></a>
         <input type="text" id="search-input" placeholder="Buscar lugares...">
         </div>
         <img src="./Imagenes/usuario.png" alt="" class="usuario" onclick="">
