--- a/logIn.html
+++ b/logIn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión - IncluMar</title>
+    <title>Iniciar Sesión - IncluMDP</title>
     <link rel="stylesheet" href="./css/sesion.css">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 
@@ -11,7 +11,7 @@
 <body>
 
         <div class="header">
-            <h1>IncluMar</h1>
+            <h1>IncluMDP</h1>
             <p>INICIAR SESIÓN</p>
         </div>
 
@@ -32,4 +32,5 @@
         </form>
         <script src="./js/frontCuenta.js"></script>
 </body>
+
 </html>
