--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
     <script src="./js/Establecimientos.js"></script>
     <script>
         function abrirModal(modal){
+            Console.log(modal)
             var m = document.getElementById(modal)
             m.showModal();
         }
