--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <script src="./js/Establecimientos.js"></script>
     <script>
         function abrirModal(modal){
-            Console.log(modal)
+            console.log(modal)
             var m = document.getElementById(modal)
             m.showModal();
         }
