--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section class="places-list">
             <div id="places-head">
                 <h2>Lugares Accesibles</h2>
-                <button id="Filtros" onclick="abrirModal('filtros')">Filtros</button>
+                <button id="Filtros" onclick="abrirModal('filtrado')">Filtros</button>
             </div>
             <div id="places-div"></div>
             
